# epilepsy-detection

./: LICENSE  README.md  TimeFeats.m  physionet_data.mat
data/: 5_minuttes_before_index_matrix.mat  totalFeatsmat.mat
java/app/: CMakeLists.txt  build.gradle  local.properties
java/app/gradle/wrapper/: gradle-wrapper.properties
java/app/src/main/: AndroidManifest.xml
java/app/src/main/cpp/: abs.cpp  abs.h  bsxfun.cpp  bsxfun.h  buildInfo.mat  codeInfo.mat  conv.cpp  conv.h  diff.cpp  diff.h  eml_setop.cpp  eml_setop.h  filter.cpp  filter.h  filtfilt.cpp  filtfilt.h  findpeaks.cpp  findpeaks.h  insertionsort.cpp  insertionsort.h  introsort.cpp  introsort.h  mean.cpp  mean.h  mrdivide_helper.cpp  mrdivide_helper.h  power.cpp  power.h  pt.cpp  pt.h  pt_data.cpp  pt_data.h  pt_emxAPI.cpp  pt_emxAPI.h  pt_emxutil.cpp  pt_emxutil.h  pt_initialize.cpp  pt_initialize.h  pt_rtw.bat  pt_rtw.mk  (+21 more)
java/app/src/main/cpp/examples/: main.cpp  main.h
java/app/src/main/cpp/html/: report.mldatx
java/app/src/main/cpp/interface/: _coder_pt_api.c  _coder_pt_api.h  _coder_pt_info.c  _coder_pt_info.h  _coder_pt_mex.cpp  _coder_pt_mex.h
java/app/src/main/java/pantompkins/: Filter.java  Peaks.java  QRSDetector.java
java/app/src/main/res/drawable/: ic_26589.xml  ic_warning_black_24dp.xml
java/app/src/main/res/layout/: activity_main.xml  plot.xml  seizure_data.xml
java/app/src/main/res/layout-land/: main_activity.xml
java/app/src/main/res/mipmap-anydpi-v26/: seizure_the_day.xml
java/app/src/main/res/values/: colors.xml  seizure_the_day_background.xml  strings.xml  styles.xml
(+89 files in other folders)
